--- a/index.html
+++ b/index.html
@@ -18,6 +18,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PORTAFOLIOReact</title>
   </head>
+  <!-- Google tag (gtag.js) -->
+  <script
+    async
+    src="https://www.googletagmanager.com/gtag/js?id=G-3G2N6BXZZC"
+  ></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag("js", new Date());
+
+    gtag("config", "G-3G2N6BXZZC");
+  </script>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
